114 using bloom filter for ignored words (#191)
* #114 Using a bloom filter for ignored terms look ups.

Signed-off-by: jzonthemtn <jeff.zemerick@philterd.ai>

* #114 Removing inadvertent changes.

Signed-off-by: jzonthemtn <jeff.zemerick@philterd.ai>

---------

Signed-off-by: jzonthemtn <jeff.zemerick@philterd.ai>